src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Channel_Class__c</fullName>
        <description>Channel classification code of the account. Translated into user language via translation workbench</description>
        <inlineHelpText>Channel classification of the account.</inlineHelpText>
        <label>Channel Class</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Opportunites__c</fullName>
        <description>R4V1-This field refers to the total number of closed won opportunities</description>
        <label># Closed Won Opportunites</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Code_of_Conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Code of Conduct Checkbox</description>
        <inlineHelpText>Tick this box if channel partner acknowledges and confirms that they have received a copy, read and understood the ABB Code of Conduct</inlineHelpText>
        <label>Code of Conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <description>R5 - Company Description</description>
        <inlineHelpText>General presentation of the company. Will also be visible on company profile on ABB.com (Will come in R6)</inlineHelpText>
        <label>Company Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_History__c</fullName>
        <description>R5 - Company History</description>
        <inlineHelpText>Describe when the company was established and the most important milestones in the company history</inlineHelpText>
        <label>Company History</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Status__c</fullName>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Clearing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Legal Entity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_core_business_area__c</fullName>
        <description>R5 - Company core business area</description>
        <inlineHelpText>Describe in short. Used in pre-qualification summary</inlineHelpText>
        <label>Company core business area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division_1__c</fullName>
        <description>R5 - Division</description>
        <inlineHelpText>..from where the status above is generated</inlineHelpText>
        <label>Division</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_HQ_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domestic Ultimate HQ Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Domestic Ultimate HQ Name)</relationshipLabel>
        <relationshipName>AccountsDomUHQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family_Tree_Level__c</fullName>
        <label>Family Tree Level</label>
        <picklist>
            <picklistValues>
                <fullName>Global Headquarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Ultimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent Headquarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Location</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GD43__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - GD43</description>
        <inlineHelpText>Mark if GD43 is completed. Workflow to be implemented in R6</inlineHelpText>
        <label>GD43</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Global_HQ_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global HQ Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Global HQ Name)</relationshipLabel>
        <relationshipName>AccountsGHQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_ID__c</fullName>
        <formula>GUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICV_ID__c</fullName>
        <externalId>true</externalId>
        <label>ICV ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ICV_level__c</fullName>
        <label>ICV level</label>
        <picklist>
            <picklistValues>
                <fullName>TCD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoicing Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Picklist containing the Industry Usage Values</description>
        <label>Industry Usage</label>
        <picklist>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Channel_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Defines whether it is a channel class</description>
        <label>Is Channel Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Lookup to User</description>
        <label>Group/Strategic/Local Major Acct Mgr.</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by__c</fullName>
        <description>This will provide the Name and email Address of the user who modified the account recently. This field will be used in a flow, sending updates to the GIS. Hidden</description>
        <formula>LastModifiedBy.LastName &amp;&quot; (&quot;&amp; LastModifiedBy.Email &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will provide the Name and email Address of the user who modified the account recently. This field will be used in a flow, sending updates to the GIS.</inlineHelpText>
        <label>Last Modified by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leading_Business_Partner_Segment__c</fullName>
        <label>Leading Business Partner Segment</label>
        <picklist>
            <picklistValues>
                <fullName>00.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27.1</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_Local_City__c</fullName>
        <label>Primary Address (Local): City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Local_Country__c</fullName>
        <label>Primary Address (Local): Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Local_PostalCode__c</fullName>
        <label>Primary Address (Local): Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Local_State__c</fullName>
        <label>Primary Address (Local): State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Local_Street__c</fullName>
        <label>Primary Address (Local): Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Local__c</fullName>
        <label>Primary Address (Local)</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Market_Development_Funds__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - Market Development Funds</description>
        <inlineHelpText>Mark if available for this partner. Workflow to be implemented in R6</inlineHelpText>
        <label>Market Development Funds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NDA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R5 - NDA</description>
        <label>NDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Local__c</fullName>
        <inlineHelpText>Customer&apos;s Company Name (align to GIS)</inlineHelpText>
        <label>Account Legal Name (Local Language)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Record_Type__c</fullName>
        <label>Old Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunities__c</fullName>
        <description>R5 - Opportunities</description>
        <inlineHelpText>Describe opportunities related to this partner&apos;s overall business</inlineHelpText>
        <label>Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <description>This field is used in reports and counts the number of opportunities for an account</description>
        <label>Opportunity Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Owner_structure__c</fullName>
        <description>R5 - Owner structure</description>
        <label>Owner structure</label>
        <picklist>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Acc_ID__c</fullName>
        <formula>IF (Parent.Parent.Parent.Parent.Parent.ParentId != NULL, 
	Parent.Parent.Parent.Parent.Parent.ParentId, 
	IF (Parent.Parent.Parent.Parent.ParentId != NULL, 
	Parent.Parent.Parent.Parent.ParentId, 
		IF (Parent.Parent.Parent.ParentId != NULL, Parent.Parent.Parent.ParentId,
		IF (Parent.Parent.ParentId != NULL, Parent.Parent.ParentId,
		IF (Parent.ParentId != NULL, Parent.ParentId, ParentId)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Acc ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_GUID__c</fullName>
        <description>This provides a text line of the parent account with GUID for the GIS update flow</description>
        <formula>IF(NOT(ISBLANK(ParentId)), 
Parent.Name &amp; &quot;  ( &quot; &amp; Parent.GUID__c &amp;&quot; )&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>HIDDEN</inlineHelpText>
        <label>Parent GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Local_Address_City__c</fullName>
        <description>R4.4 Implementation CN CR</description>
        <label>Postal Address (Local): City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Local_Address_Country__c</fullName>
        <description>R4.3 Account Field CR Implementation</description>
        <label>Postal Address (Local): Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Local_Address_State__c</fullName>
        <description>R4.3 Postal Address State</description>
        <label>Postal Address (Local): State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Local_Address_Street__c</fullName>
        <description>R4.4 Implementation CN CR</description>
        <label>Postal Address (Local): Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Postal_Local_Address__c</fullName>
        <description>R4,4 implementation CN CR</description>
        <label>Postal Address (Local): Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
   <fields>
        <fullName>Primary_Account_Manager__c</fullName>
        <description>The primary account manager requires a valid email address!</description>
        <inlineHelpText>This is the e-mail address for the Group or Strategic or Local Major Account Manager. The Group or Strategic Account is set by Group and the Local Major is a local selection.</inlineHelpText>
        <label>Group/Strategic/Local Major Acct Mgr.</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>This is hidden field to be used in the Account search filters and results!</description>
        <label>Primary Address: Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>

<fields>
        <fullName>Primary_Address_Local_Country__c</fullName>
        <description>R4.3 Account Field CR Implementation</description>
        <label>Primary Address (Local): Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
                 <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
     <fields>
        <fullName>Primary_Address_Local_State__c</fullName>
        <description>R4.4 Account Contact Field Implementation for china rollout</description>
        <label>Primary Address (Local): State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Local_Street__c</fullName>
        <description>R4.3 Primary Address Local</description>
        <label>Primary Address (Local): Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Local_Zip_Code__c</fullName>
        <description>R4.4 Account &amp; Contact Field implementation for China Rollout</description>
        <label>Primary Address (Local): Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReAssign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReAssign</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>